--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+.bold {
+  font-weight: 600;
+  text-transform: uppercase;
+}
 .App {
-  text-align: center;
-}
+  position: absolute;
+  width:100%;
+  height: 100%;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  header {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 8px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    div {
+      font-size: 15px;
+      width: 324px;
+      text-align: center;
+      margin: 0 auto;
+    }
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  footer {
+    width: 360px;
+    position: relative;
+    margin: 0 auto;
+    padding: 10px 4px;
+    margin-top: 10px;
+    
+    .score {
+      justify-content: center;
+      display: flex;
 
-.App-link {
-  color: #61dafb;
-}
+      div {
+        padding: 8px
+      }
+    }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+    .restart {
+      display: flex;
+      justify-content: center
+    }
   }
-  to {
-    transform: rotate(360deg);
+
+  .container {
+    border: 1px solid #DEDEDE;
+    padding: 12px;
+    box-shadow: 0 0 4px 4px #DEDEDE; 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
+    align-items: stretch;
+    gap: 1rem;
+    margin: 0 auto;
+    width: 360px;
+    height: 300px;
+    perspective: 100%;
+    max-width: 720px;
   }
 }
